# ganon

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yaml  .travis.yml  404.html  CMakeLists.txt  LICENSE  README.md  READMEnew.md  VERSION.txt  ganon  ganon-build.cpp  ganon-classify.cpp  ganon-update.cpp  index.html  mkdocs.yml  pre-commit.sh  producer_consumer.cpp  producer_consumer_async.cpp  producer_consumer_async2.cpp  pyproject.toml  search.html  setup.cfg  setup.py  sitemap.xml
classification/: index.html
custom_databases/: index.html
databases/: index.html
default_databases/: index.html
src/: CMakeLists.txt
src/defaults/: defaults.hpp.in
src/ganon/: __init__.py  bins.py  build_update.py  classify.py  classify_report.py  config.py  ganon.py  gnn.py  old_build_update.py  reassign.py  report.py  seqinfo.py  table.py  tax.py  tax_util.py  util.py
src/ganon-build/: Arguments.hpp  CommandLineParser.cpp  Config.hpp  GanonBuild.cpp  GanonBuild.hpp  ganon-build.cpp  main.cpp
src/ganon-build/include/ganon-build/: CommandLineParser.hpp  Config.hpp
src/ganon-classify/: Arguments.hpp  CommandLineParser.cpp  Config.hpp  GanonClassify.cpp  Time.hpp  ganon-classify.cpp  main.cpp
src/ganon-classify/include/ganon-classify/: CommandLineParser.hpp  Config.hpp  GanonClassify.hpp  LICENSE_hierarchical_interleaved_bloom_filter.md  hierarchical_interleaved_bloom_filter.hpp
src/ganon-update/: ganon-update.cpp
src/utils/include/utils/: IBFConfig.hpp  LCA.hpp  SafeQueue.hpp  StopClock.hpp  Time.hpp  adjust_seed.hpp  dna4_traits.hpp  load_map.hpp  safequeue.hpp
tests/: CMakeLists.txt
tests/aux/: Aux.hpp
tests/ganon/: utils.py
tests/ganon-build/: GanonBuild.test.cpp
tests/ganon-build/data/: bacteria_build.filter  bacteria_seqid_bin.txt  bacteria_seqid_bin_incomplete.txt  build_output.filter  mode_input.tsv
tests/ganon-build/data/files/: bacteria_acc_bin.txt  virus_upd_archaea_bacteria_acc_bin.txt
tests/ganon-build/data/filters/: bacteria_acc_bin_incomplete.txt  bacteria_build.ibf  bacteria_upd_complete_virus_acc_bin.txt  bacteria_upd_complete_virus_build.ibf  bacteria_upd_virus_build.ibf  virus_acc_bin.txt  virus_build.ibf  virus_upd_archaea_bacteria.ibf  virus_upd_bacteria_acc_bin.txt  virus_upd_bacteria_build.ibf
tests/ganon-classify/: GanonClassify.test.cpp
tests/ganon-classify/data/: archaea.filter  archaea.simulated.1.fq  ba-ba_e3.txt  bacteria.filter  bacteria.map  bacteria_group_bin.txt  classify_output-b-b_e0u1.txt  classify_output-v-v_e3.txt  classify_output.txt  simulated.1.fq  simulated.2.fq  virus.filter
tests/ganon-classify/data/files/: virus.map  virus_acc_bin_update.txt
tests/ganon-classify/data/filters/: archaea.ibf  archaea.map  archaea.tax  bacteria.ibf  bacteria.map  bacteria.tax  bacteria_virus.map  bacteria_virus.tax  virus.ibf  virus.map  virus.tax  virus_acc_bin_update.txt
tests/ganon-classify/data/reads/: bacteria.simulated.1.fq  bacteria_id.1.fq  bacteria_id.2.fq  problematic.fq  virus.simulated.1.fq
tests/ganon-classify/data/results/: ab-a_e34c12.lca  ab-a_e34c12.rep  ab-a_e34c12u01.all  ab-a_e34c12u01.lca  ab-a_e34c12u01.rep  ab-ab_e0-paired.all  ab-ab_e0-paired.rep  b-b_e0-paired.all  b-b_e0-paired.rep  b-b_e1u0-paired.all  b-b_e1u0-paired.lca  b-b_e1u0-paired.rep  b-b_e2u0f6-minkmers.rep  b-b_e2u0f6.all  b-b_e2u0f6.lca  b-b_e2u0f6.rep  b-b_e3f2.all  b-b_e3f2.lca  b-b_e3f2.rep  b-b_e3u1.lca  b-b_e3u1.rep  b-b_e5.all  b-b_e5.lca  b-b_e5.rep  b-b_e5l-1.all  b-b_e5l-1.lca  b-b_e5l-1.rep  b-b_m0.29.lca  b-b_m0.29.rep  b-b_m0.53u0f6.all  b-b_m0.53u0f6.lca  b-b_m0.53u0f6.rep  b-b_m1-noerrors.rep  b-problematic_e3.lca  b-problematic_e3.rep  ba-ba_e0.rep  ba-ba_e04.all  ba-ba_e04.lca  ba-ba_e04.rep  ba-ba_e0c12-split.2.lca  (+26 more)
tests/ganon/data/: bac.sim.1.fq  bac.sim.2.fq  bacteria_assembly.gnn  bacteria_assembly.map  bacteria_assembly.seqinfo.txt  bacteria_assembly.tax  bacteria_custom.gnn  bacteria_custom.ibf  bacteria_custom.map  bacteria_default.gnn  bacteria_default.ibf  bacteria_default.tax  download_test_set.sh  download_test_set_build.sh  mini_names.dmp  mini_nodes.dmp  vir.sim.1.fq  vir.sim.2.fq
tests/ganon/data/bkp/: bacteria_assembly.tax  bacteria_custom.gnn  bacteria_custom.seqinfo.txt  bacteria_custom.tax  bacteria_default.ibf
tests/ganon/data/build-custom/: assembly_summary.txt  assembly_summary_empty.txt  filter_files.sh  make_files.sh
tests/ganon/data/build-custom/convert/: convert_gtdb.tsv  convert_ncbi.tsv  convert_nodes.dmp
tests/ganon/data/build-custom/remote/genomes/refseq/: assembly_summary_refseq.txt
tests/ganon/data/classify/: test_db.hibf  test_db.tax
tests/ganon/data/report/: results.rep  results2.rep
tests/ganon/data/table/: report_matches1.tre  report_matches2.tre  report_matches3.tre  report_reads1.tre  report_reads2.tre  report_reads3.tre  results.tre
tests/ganon/data/table/bkp/: report_matches2.tre  report_matches3.tre  report_reads2.tre  report_reads3.tre
tests/ganon/data/update/: bacteria_half_seqinfo.txt  bacteria_half_virus_seqinfo.txt  bacteria_seqinfo.txt  bacteria_virus_part2_seqinfo.txt  bacteria_virus_seqinfo.txt  virus_part1_seqinfo.txt  virus_seqinfo_duplicated.txt
tests/ganon/integration/: test_build.py  test_build_custom.py  test_classify.py  test_reassign.py  test_report.py  test_table.py  test_update.py  utils.py
tests/ganon/integration/data/: bacteria_acc_len_taxid.txt  bacteria_default.map  bacteria_default.seqinfo.txt  bacteria_default.tax  bacteria_seqinfo.txt  mini_names.dmp  mini_nodes.dmp  sample_archaea.gnn  sample_archaea.ibf  sample_archaea.map  sample_bacteria.bins  sample_bacteria.gnn  sample_bacteria.map  sample_bacteria.nodes  sample_virus.gnn  sample_virus.ibf  sample_virus.map  virus_acc_len_taxid.txt
tests/ganon/integration/data/update/: virus_seqinfo.txt
tests/ganon/integration_online/: test_build.py  test_build_custom.py  test_report.py  test_update.py
tests/ganon/unit/: test_functions.py  test_read_nodes.py  test_tax.py
tests/utils/: LCA.test.cpp  SafeQueue.test.cpp  safequeue.test.cpp
tests/utils/data/lca/: ncbi.tax  tree.tax
(+27 files in other folders)
