[project]
name = "ganon"
dynamic = [ "version" ]
description = "ganon2 efficiently classifies genomic sequences against large sets of references."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.6"
dependencies = [ "pandas>=1.2.0", "multitax>=1.3.2" ]

[project.urls]
Homepage = "https://pirovc.github.io/ganon/"
Documentation = "https://pirovc.github.io/ganon/"
Repository = "https://github.com/pirovc/ganon"

[project.optional-dependencies]
dev = [ "ruff", "coverage", "parameterized>=0.9.0" ]

[project.scripts]
ganon = "ganon.ganon:main_cli"

[build-system]
requires = [ "setuptools>=80", "setuptools_scm>=8" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files = ["scripts/ganon-get-seq-info.sh", "libs/genome_updater/genome_updater.sh"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
write_to = "VERSION.txt"